List of chats preview
1- Landing Screen renamed to Landing Activty
2- Activity_landing_screen renamed to Activity_Landing
3- Added a bunch of chat tests in LandingActivity
4- Util renamed to Lib
5- Lib structured
6- Added Chat and ChatsAdapter
7- Added a layout representing the chat card
8- Added some colors and strings in resources

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hanasu">
         <activity
-            android:name=".LandingScreen"
+            android:name=".LandingActivty"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
