--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.abstrack.hanasu" >
+    package="com.abstrack.hanasu">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,7 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Hanasu" >
+        android:theme="@style/Theme.Hanasu">
+        <activity
+            android:name=".activity.auth.WelcomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.auth.ProfileInfoActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.auth.VerifyEmailActivity"
             android:exported="false" />
@@ -38,9 +44,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service
             android:name=".firebase.MessagingService"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
