--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.abstrack.hanasu" >
+    package="com.abstrack.hanasu">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,27 +10,37 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Hanasu" >
+        android:theme="@style/Theme.Hanasu">
+        <activity
+            android:name=".activity.landing.AddChatActivity"
+            android:noHistory="true"
+            android:exported="false" />
         <activity
             android:name=".activity.auth.VerifyEmailActivity"
+            android:noHistory="true"
             android:exported="false" />
         <activity
             android:name=".activity.auth.ForgotPasswordActivity"
+            android:noHistory="true"
             android:exported="false" />
         <activity
             android:name=".activity.auth.VerifyForgottenPasswordActivity"
+            android:noHistory="true"
             android:exported="false" />
         <activity
             android:name=".activity.auth.LoginActivity"
+            android:noHistory="true"
             android:exported="false" />
         <activity
-            android:name=".activity.LandingActivity"
+            android:name=".activity.landing.LandingActivity"
             android:exported="false" />
         <activity
             android:name=".activity.auth.RegisterActivity"
+            android:noHistory="true"
             android:exported="false" />
         <activity
             android:name=".activity.LoadingActivity"
+            android:noHistory="true"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,13 +48,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service
-            android:name=".firebase.MessagingService"
-            android:exported="false" >
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
 
         <meta-data
             android:name="preloaded_fonts"
