Replaced finish() with Util.startActivity
- Now you can enter Landing automatically checking your Preferences

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,14 +29,15 @@
             android:exported="false" />
         <activity
             android:name=".activity.auth.LoginActivity"
-            android:noHistory="true"
+            android:exported="false" />
+        <activity
+            android:name=".activity.SetUsernameActivity"
             android:exported="false" />
         <activity
             android:name=".activity.landing.LandingActivity"
             android:exported="false" />
         <activity
             android:name=".activity.auth.RegisterActivity"
-            android:noHistory="true"
             android:exported="false" />
         <activity
             android:name=".activity.LoadingActivity"
