Profile Picture Layout
Creación correspondiente a la selección de la foto de perfil del usuario.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,19 +19,19 @@
             android:exported="false" />
         <activity
             android:name=".activity.landing.AddFriendActivity"
-            android:noHistory="true"/>
+            android:noHistory="true" />
         <activity
             android:name=".activity.auth.VerifyEmailActivity"
-            android:noHistory="true"
-            android:exported="false" />
+            android:exported="false"
+            android:noHistory="true" />
         <activity
             android:name=".activity.auth.ForgotPasswordActivity"
-            android:noHistory="true"
-            android:exported="false" />
+            android:exported="false"
+            android:noHistory="true" />
         <activity
             android:name=".activity.auth.VerifyForgottenPasswordActivity"
-            android:noHistory="true"
-            android:exported="false" />
+            android:exported="false"
+            android:noHistory="true" />
         <activity
             android:name=".activity.auth.LoginActivity"
             android:exported="false" />
@@ -46,14 +46,15 @@
             android:exported="false" />
         <activity
             android:name=".activity.LoadingActivity"
-            android:noHistory="true"
-            android:exported="true">
+            android:exported="true"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
