--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.3.1')
     implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'jp.wasabeef:blurry:4.0.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.firebase:firebase-auth'
