--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     implementation platform('com.google.firebase:firebase-bom:29.3.1')
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'jp.wasabeef:blurry:4.0.1'
