Upload image to firebase working + UserManager ref

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:exported="false"
             android:noHistory="true" />
         <activity
-            android:name=".activity.welcome.ProfileInfoActivity"
+            android:name=".activity.welcome.SetProfileInfoActivity"
             android:exported="false" />
         <activity
             android:name=".activity.landing.AddFriendActivity"
