--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     implementation platform('com.google.firebase:firebase-bom:29.3.1')
     implementation 'androidx.appcompat:appcompat:1.4.1'
