--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             android:noHistory="true" />
         <activity
             android:name=".activity.welcome.SetProfileInfoActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:noHistory="true" />
         <activity
             android:name=".activity.landing.AddFriendActivity"
             android:exported="false"
@@ -47,7 +48,7 @@
         <activity
             android:name=".activity.welcome.SetUsernameActivity"
             android:exported="false"
-            android:noHistory="true" />
+            android:noHistory="true"/>
         <activity
             android:name=".activity.landing.LandingActivity"
             android:exported="false" />
